--- a/KrausxRGA/UI/wndRMAFormPrint.xaml
+++ b/KrausxRGA/UI/wndRMAFormPrint.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="KrausRGA.UI.wndRMAFormPrint"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="wndRMAFormPrint" Height="2500" Width="700" Loaded="Window_Loaded_1">
+        Title="wndRMAFormPrint" Height="1000" Width="700" Loaded="Window_Loaded_1">
     <Grid>
         <Border>
             <Canvas>
@@ -77,7 +77,7 @@
                 
                 
                 
-                <Canvas x:Name="CanvasNote">
+                <Canvas x:Name="CanvasNote" Canvas.Top="90">
                 <Border Height="24" Width="692" Background="LightGray" Canvas.Top="584">
                     <TextBlock TextWrapping="Wrap" Text="Note:" FontSize="18" Foreground="Black" Margin="4,0,493,0"/>
                 </Border>
