--- a/KrausxRGA/UI/wndZoomImageWindow.xaml
+++ b/KrausxRGA/UI/wndZoomImageWindow.xaml
@@ -1,10 +1,33 @@
 ﻿<Window x:Class="KrausRGA.UI.wndZoomImageWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Zoom Image" Height="500" Width="500" Loaded="Window_Loaded_1" WindowStartupLocation="CenterScreen">
+        Title="Zoom Image" Height="600" Width="500" Loaded="Window_Loaded_1" WindowStartupLocation="CenterScreen">
+    
+    <Window.Resources>
+        <!--<Style TargetType="Button">
+            <Setter Property="Background" Value="LimeGreen"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Background="{TemplateBinding Background}">
+                            <ContentPresenter ContentSource="Content"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>-->
+    </Window.Resources>
+    
     <Grid>
-        <Canvas Height="500" Width="500">
-            <Image Height="500" Width="500" x:Name="imgzoom"></Image>
-        </Canvas>
+        
+        <Border>
+            <Canvas Margin="0,0,0,514">
+                <Button Background="Pink" Content="Save Image" x:Name="BtnSaveImage" Canvas.Left="41" Canvas.Top="19" Click="BtnSaveImage_Click_1" Height="27" Width="108"  ></Button>
+            </Canvas>
+        </Border>
+        
+        <Canvas Width="500" Margin="0,74,-8,35">
+             <Image x:Name="imgzoom" Height="490" Width="500" Canvas.Top="10" />
+       </Canvas>
     </Grid>
 </Window>
